--- a/ToolImageImporter.uproject
+++ b/ToolImageImporter.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "ToolImageImporter",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"ProceduralMeshComponent"
+			]
 		}
 	]
 }
