--- a/ToolImageImporter.uproject
+++ b/ToolImageImporter.uproject
@@ -10,7 +10,8 @@
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
 				"Engine",
-				"ProceduralMeshComponent"
+				"ProceduralMeshComponent",
+				"UMG"
 			]
 		}
 	]
