--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -78,6 +78,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Handbrake",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Handbrake",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=Up)
@@ -86,6 +87,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_RightTrigger)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Gamepad_LeftTrigger)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Gamepad_LeftStick_Left)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftStick_Right)
++AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=Gamepad_RightStick_Up)
++AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=Gamepad_RightStick_Down)
++AxisMappings=(AxisName="LookRight",Scale=1.000000,Key=Gamepad_RightStick_Right)
++AxisMappings=(AxisName="LookLeft",Scale=1.000000,Key=Gamepad_RightStick_Left)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
