--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -94,8 +94,6 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LookLeft",Scale=1.000000,Key=Left)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=Down)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Gamepad_LeftTriggerAxis)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Gamepad_LeftStick_Left)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftStick_Right)
 +AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=Gamepad_RightStick_Up)
@@ -103,6 +101,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LookRight",Scale=1.000000,Key=Gamepad_RightStick_Right)
 +AxisMappings=(AxisName="LookLeft",Scale=1.000000,Key=Gamepad_RightStick_Left)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
++AxisMappings=(AxisName="Brake",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Brake",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
