--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -65,7 +65,7 @@ r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 r.UsePreExposure=True
 r.EyeAdaptation.EditorOnly=False
-r.DefaultFeature.MotionBlur=True
+r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=False
 r.SSGI.Enable=False
