fixed hism issue

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -130,3 +130,6 @@ VisualizeCalibrationColorMaterialPath=None
 VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=None
 
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+
