--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -133,3 +133,6 @@ VisualizeCalibrationGrayscaleMaterialPath=None
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 
+[/Script/Engine.UserInterfaceSettings]
+UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=1.000000),(Time=720.000000,Value=1.000000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve=None)
+
